ocaml/testsuite/tests/parse-errors/singleton_labeled_tuple_type.compilers.reference
File "singleton_labeled_tuple_type.ml", line 8, characters 19-26:
8 | let foo (just_x : (x : int)) = just_x
                       ^^^^^^^
Error: Labeled tuple types must have length 2 or greater
